testsuite/tests/polykinds/T16762a.stderr

T16762a.hs:12:22: error:
    • These kind and type variables: a k (b :: k)
      are out of dependency order. Perhaps try this ordering:
        k (a :: k) (b :: k)
    • In the type instance declaration for ‘F’
